unpackaged/main/default/objects/PricebookEntry/fields/breadwinner_ns__NetSuite_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Item_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Item Price</label>
    <referenceTo>breadwinner_ns__BW_Item_Price__c</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>BWPriceBookEntries</relationshipName>
    <type>Lookup</type>
</CustomField>