unpackaged/main/default/objects/PricebookEntry/fields/Minimum_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sales_Price__c</fullName>
    <label>Minimum Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>