unpackaged/main/default/objects/PricebookEntry/fields/Price_Book_Entry_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Entry ID (Case Safe)</label>
    <type>Text</type>
</CustomField>