unpackaged/main/default/objects/PricebookEntry/fields/Stripe_Price_ID_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_ID_Quarterly__c</fullName>
    <label>Stripe Price ID (Quarterly)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>