unpackaged/main/default/objects/PricebookEntry/fields/Stripe_Price_ID_Semi_annual__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_ID_Semi_annual__c</fullName>
    <label>Stripe Price ID (Semi-annual)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>